几个夜晚，终于完成Hybird模式在安卓端的基础框架。实现了  JS  -> JAVA  ->  C 的具体流程，也同时实现了其反向流程，能够重现AnyMSG客户端核心功能。这也是已有WebAPI与NativeAPI的一次深度融合，是重要的里程碑。
回过头看，AnyMSG 的客户端设计与实现工作，将来由底至顶可以独立分割为如下三大部分：
1. 纯C语言代码，主要运行在Linux环境下，是所有平台版本的来源和基础。负责骨干网与核心功能的升级，属于核心源代码级别，代码量较大，具备良好的可移植性，已经稳定运行在低档/高档32位ARM/MIPS、硬/软IP协议栈、FSM/RTOS/嵌入式Linux平台上。未来将逐渐覆盖更多热门芯片平台，并有意研究将AnyMSG骨干网的交换与路由组件向FPGA移植，以期获得更高的工作效率。
2. nativeAPI 代码，一方面使用C/C++语言编写，结合各种平台自身的NDK编程接口，重点实现NativeProvider.C与NativeAPI.C，分别对应调用上层方法（如JAVA）与回调C语言函数；另一方面使用平台自身语言（如JAVA），编写AnyMSG类，承担Bridge功能：对更前端提供多种基础业务方法，如消息发送，网络详情，系统配置等。该类也同时提供边沿触发式的接口方法，为上层的事件编程机制提供基础支撑，上层软件只需Override对应的事件方法即可。该部分代码属于OP/半OO与纯OO的混合编程，有时涉及底层指针，有时又需要关注纯OO的运行时环境细节，如虚拟机或框架的内核运行机制等，应该说是较复杂的一层，而代码量却很少，更多需要对理论原理与实现机制的掌握与应用。其中OP/半OO的部分，属于核心源代码，而纯OO的部分，则作为接口，提供给二次开发者使用。称之为NativeAPI。
3. WebView代码，使用HTML + CSS + JS技术实现，主要关注UI的呈现与交互，其运行中需要的所有数据，均来源于统一的JS接口：anyMSG.JS中的anyMSGCallbackFNC，使用JSON格式从JAVA层取得。为便于更上层的开发者使用，该层还实现一个AnyMSGWebAPI类，提供各种操作的静态方法，实现了一个ErrGenerator类，用于帮助用户更好地产生符合AnyMSG系统标准的JSON对象，从而节省了此部分人员的开发时间。
目前官方给出的样例中，使用的是原生自带的webView控件，因此渲染效率并不高，效果也不好，开发者可以自行更换至更流畅的Hybird框架，如国内较火的HBuilder。

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -532,7 +532,7 @@ function anyMSGSendCallbackFNC(jsonObj) {
 
 function anyMSGLoginCallbackFNC(jsonObjs) {
     eval("var jsonObj = " + jsonObjs);
-
+//    alert("oprCode:" + jsonObj.opr.code);
     try {
         switch (jsonObj.opr.code) {
             case 2001:/*登录OK*/
